tests/diagnostics/statements/termination/abort_message_not_string/expect.txt
# exit: 1
input/lib.coppice:2:11: error: abort message must be string
      abort(1)
            ^
